# exam-3

javascript-scripts/: package.json
python-scripts/: pyproject.toml
python-scripts/discussion-week-6/: shortest-paths.py  traversals.py
python-scripts/divide-and-conquer/: maxima.py  strassen.py
python-scripts/dynamic_programming/: 0_1_knapsack.py  fibonacci.py  lcs.py  scheduled_jobs.py
python-scripts/networkx/: dijkstra-example.py
